--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -2,12 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-        <RelativeLayout
-            android:id="@+id/canvas_frame"
+        <ScrollView
+            android:id="@+id/canvas_vertical_scroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#aaa">
-        </RelativeLayout>
+            android:gravity="center">
+
+                <HorizontalScrollView
+                    android:id="@+id/canvas_horizental_scroll"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+
+                        <LinearLayout
+                            android:id="@+id/canvas_frame"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#aaa"
+                            android:orientation="vertical" />
+
+                </HorizontalScrollView>
+
+        </ScrollView>
 </LinearLayout>
