--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -2,21 +2,18 @@
 <ScrollView android:id="@+id/canvas_vertical_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
                 <HorizontalScrollView
                     android:id="@+id/canvas_horizental_scroll"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center">
+                    android:layout_height="match_parent">
 
                         <LinearLayout
                             android:id="@+id/canvas_frame"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="#aaa"
-                            android:layout_gravity="center"
                             android:orientation="vertical" />
 
                 </HorizontalScrollView>
