--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:id="@+id/canvas_vertical_scroll"
+
+<com.example.diary.CustomLinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="#aaa"
+    android:orientation="vertical"
+    android:gravity="center">
 
-                <HorizontalScrollView
-                    android:id="@+id/canvas_horizental_scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:id="@+id/canvas_frame"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#aaa"
+                        android:orientation="vertical" />
 
-                        <LinearLayout
-                            android:id="@+id/canvas_frame"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="#aaa"
-                            android:orientation="vertical" />
-
-                </HorizontalScrollView>
-</ScrollView>
+</com.example.diary.CustomLinearLayout>
