--- a/app/src/main/res/layout/dialog_colorpicker.xml
+++ b/app/src/main/res/layout/dialog_colorpicker.xml
@@ -4,4 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.example.diary.ColorPicker.ColorPicker
+        android:id="@+id/colorpicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.example.diary.ColorPicker.SVBar
+        android:id="@+id/svbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.example.diary.ColorPicker.OpacityBar
+        android:id="@+id/opacitybar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.example.diary.ColorPicker.SaturationBar
+        android:id="@+id/saturationbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <com.example.diary.ColorPicker.ValueBar
+        android:id="@+id/valuebar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
