--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.viewpager.widget.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.diary.CanvasViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/viewPager"
     android:layout_width="match_parent"
@@ -10,4 +10,4 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toTopOf="parent">
 
-</androidx.viewpager.widget.ViewPager>
+</com.example.diary.CanvasViewPager>
