Add thickness slider

--- a/app/src/main/res/layout/dialog_colorpicker.xml
+++ b/app/src/main/res/layout/dialog_colorpicker.xml
@@ -12,6 +12,11 @@
 
     </FrameLayout>
 
+    <com.example.diary.ThicknessBar
+        android:id="@+id/thicknessbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
