--- a/app/src/main/res/menu/drawbar_action.xml
+++ b/app/src/main/res/menu/drawbar_action.xml
@@ -3,6 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_pen"
+        android:icon="@drawable/ic_action_pen"
+        android:title="Pen"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_highlighter"
+        android:icon="@drawable/ic_action_highlighter"
+        android:title="Highlighter"
+        app:showAsAction="always"/>
+
+    <item
         android:id="@+id/action_eraser"
         android:icon="@drawable/ic_action_eraser"
         android:title="Erase"
