--- a/app/src/main/res/layout/dialog_colorpicker.xml
+++ b/app/src/main/res/layout/dialog_colorpicker.xml
@@ -3,19 +3,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/popup">
 
     <FrameLayout
         android:id="@+id/dialog_colorpicker"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </FrameLayout>
-
-    <com.example.diary.ThicknessBar
-        android:id="@+id/thicknessbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
