--- a/app/src/main/res/layout/activity_canvas.xml
+++ b/app/src/main/res/layout/activity_canvas.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:background="#bbf"/>
 
-    <com.example.diary.CanvasViewPager
+    <com.example.diary.Canvas.CanvasViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,6 +30,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="parent">
-    </com.example.diary.CanvasViewPager>
+    </com.example.diary.Canvas.CanvasViewPager>
 
 </LinearLayout>
