--- a/app/src/main/res/layout/content_canvas.xml
+++ b/app/src/main/res/layout/content_canvas.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.example.diary.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.diary.Canvas.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,4 +15,4 @@
         android:background="#aaa"
         android:orientation="vertical" />
 
-</com.example.diary.CustomLinearLayout>
+</com.example.diary.Canvas.CustomLinearLayout>
