--- a/app/src/main/res/layout/dialog_colorwheel.xml
+++ b/app/src/main/res/layout/dialog_colorwheel.xml
@@ -5,27 +5,27 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
-    <com.example.diary.ColorPicker.ColorPicker
+    <com.example.diary.ColorPicker.ColorWheel.ColorPicker
         android:id="@+id/colorpicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.example.diary.ColorPicker.SVBar
+    <com.example.diary.ColorPicker.ColorWheel.SVBar
         android:id="@+id/svbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.example.diary.ColorPicker.SaturationBar
+    <com.example.diary.ColorPicker.ColorWheel.SaturationBar
         android:id="@+id/saturationbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.example.diary.ColorPicker.ValueBar
+    <com.example.diary.ColorPicker.ColorWheel.ValueBar
         android:id="@+id/valuebar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <com.example.diary.ColorPicker.OpacityBar
+    <com.example.diary.ColorPicker.ColorWheel.OpacityBar
         android:id="@+id/opacitybar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
